vlib/v/checker/tests/modules/overload_return_type.out
vlib/v/checker/tests/modules/overload_return_type/main.v:8:11: error: cannot assign to `two`: expected `Point`, not `int`
    6 |     one := Point {x:1, y:2}
    7 |     mut two := Point {x:5, y:1}
    8 |     two = one + two
      |           ~~~~~~~~~
    9 | }
